--- a/src/java/br/mackenzie/hangman/util/hangman_conf.properties
+++ b/src/java/br/mackenzie/hangman/util/hangman_conf.properties
@@ -1,6 +1,6 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
-br.mackenzie.db.driver.javadb=
-br.mackenzie.db.url.connection=
-br.mackenzie.db.url.user=hangman
-br.mackenzie.db.url.password=hangmanisdead
+br.mackenzie.db.driver.javadb=org.apache.derby.jdbc.ClientDriver
+br.mackenzie.db.url.connection=jdbc:derby://localhost:1527/hangman_db
+br.mackenzie.db.user=hangman
+br.mackenzie.db.password=hangmanisdead
